--- a/7.Employee Data Analysis Using PySpark(Mini Project)/7.Housing Data Analysis Using PySpark(Mini Project).ipynb
+++ b/7.Employee Data Analysis Using PySpark(Mini Project)/7.Housing Data Analysis Using PySpark(Mini Project).ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "18aeda02-3386-4230-b0a6-56170fb8f3e0",
+   "metadata": {},
+   "source": [
+    "**Housing Data Analysis Using PySpark(Mini Project)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f98393a-48f9-4336-b1f1-c94986b800e2",
+   "metadata": {},
+   "source": [
+    "**Dataset Link :** https://www.kaggle.com/datasets/harishkumardatalab/housing-price-prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cb000144-ebaa-4616-bde7-d2d1766ca2a0",
@@ -711,6 +727,15 @@
    "metadata": {},
    "source": [
     "the price by 10% for houses in the preferred area (prefarea = \"yes\") in df, creating a new DataFrame df_updated, and display the first 5 updated houses with bedrooms, area, prefarea, and price."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89566381-59a1-4e24-9900-131aca7a53a2",
+   "metadata": {},
+   "source": [
+    "**Conclusion**\n",
+    "The analysis shows that house prices increase with features like more bedrooms, larger area, more stories, and better facilities. Furnished houses and those in preferred areas are more expensive than unfurnished ones. Houses with parking also have higher prices. From the visualizations, we can see that location, comfort, and house size greatly affect price. Overall, the study highlights how living space, furnishing, and locality together decide the final market value of a house."
    ]
   }
  ],
