--- a/4.Exploring Structure And Contents of CSV File/4.Exploring Structure And Contents of CSV File.ipynb
+++ b/4.Exploring Structure And Contents of CSV File/4.Exploring Structure And Contents of CSV File.ipynb
@@ -1,238 +1,262 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "0ec80fb3-1340-48fb-8589-2690eab34f9b",
+   "cell_type": "markdown",
+   "id": "8f9141a2-f488-408c-93ce-3ff56278e130",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession"
+    "**Exploring Structure And Contents of CSV File**"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f9ca5922-dd02-4e60-92ca-e2db5cec7018",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f4ffc0cc-6eeb-4e52-b4aa-b0ac993aba00",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://LAPTOP-2P70OJO0:4044\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v4.0.1</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>PySparkShell</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<SparkContext master=local[*] appName=PySparkShell>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "imports the SparkSession class from PySpark, which is used to create a Spark environment for reading, processing, and analyzing data."
+    "sc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "286ac612-e97a-4deb-be52-fcefa2c13260",
+   "id": "486c7a5e-a5c1-4107-a3f5-7d1d3995b857",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark = SparkSession.builder.appName(\"HousingRDDExample\").getOrCreate()\n",
-    "sc = spark.sparkContext"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2c5e6c32-eba5-41dc-b06f-ad5a9fad0af9",
-   "metadata": {},
-   "source": [
-    "These statements create a Spark session named `\"HousingRDDExample\"` to set up the Spark environment, and then access its SparkContext (`sc`) to work with low-level RDD operations."
+    " from pyspark.sql import SparkSession\n",
+    "\n",
+    " spark = SparkSession.builder.appName(\"BasicDataFrameOps\").getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f8db873b-9fd0-45c7-a44c-246cb629b561",
+   "id": "ed336b83-3c88-44f0-8515-f811e6ad88d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = sc.textFile(\"Housing.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "31db1387-6777-4888-9df5-addd24a3eb0a",
-   "metadata": {},
-   "source": [
-    "This statement reads the file `\"Housing.csv\"` as a Resilient Distributed Dataset (RDD) of text lines, allowing low-level Spark operations on each line of the dataset."
+    "df = spark.read.csv(\"students.csv\", header=True, inferSchema=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3aa355cf-43da-4326-9069-3c2c58b24448",
+   "id": "320f06a2-5571-4f87-93cd-374d973864fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== First 5 rows ===\n",
+      "+---+-------+---+------+----+-------+-------+\n",
+      "| id|   name|age|gender|math|science|english|\n",
+      "+---+-------+---+------+----+-------+-------+\n",
+      "|  1|  Alice| 20|     F|  66|     92|     44|\n",
+      "|  2|    Bob| 20|     M|  82|     52|     77|\n",
+      "|  3|Charlie| 22|     F|  43|     57|     76|\n",
+      "|  4|  David| 19|     M|  95|     69|     46|\n",
+      "|  5|    Eva| 19|     F|  62|     44|     96|\n",
+      "+---+-------+---+------+----+-------+-------+\n",
+      "only showing top 5 rows\n"
+     ]
+    }
+   ],
    "source": [
-    "header = data.first()\n",
-    "rows = data.filter(lambda line: line != header)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ab9a97f7-ba97-4a99-97fd-937d7de3d1d7",
-   "metadata": {},
-   "source": [
-    "These statements extract the first line of the RDD as the header and then create a new RDD `rows` that excludes the header, leaving only the data rows."
+    " print(\"=== First 5 rows ===\")\n",
+    " df.show(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8c773267-010f-4f86-a3c8-d35e6de510db",
+   "id": "53116bc3-f215-42ec-9aec-80bca8c2713b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Schema ===\n",
+      "root\n",
+      " |-- id: integer (nullable = true)\n",
+      " |-- name: string (nullable = true)\n",
+      " |-- age: integer (nullable = true)\n",
+      " |-- gender: string (nullable = true)\n",
+      " |-- math: integer (nullable = true)\n",
+      " |-- science: integer (nullable = true)\n",
+      " |-- english: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "split_rdd = rows.map(lambda line: line.split(\",\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c085ecb3-88ff-488e-8a99-f726ae3626a0",
-   "metadata": {},
-   "source": [
-    "splits each line in the rows RDD by commas, creating a new RDD split_rdd where each element is a list of values representing the columns of a row."
+    "print(\"=== Schema ===\")\n",
+    "df.printSchema()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f33392a2-40a1-4dbf-bffc-ce9dbdf328a5",
+   "id": "2357d5c0-ddfe-475d-8926-4e2974267b3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Select name and math columns ===\n",
+      "+-------+----+\n",
+      "|   name|math|\n",
+      "+-------+----+\n",
+      "|  Alice|  66|\n",
+      "|    Bob|  82|\n",
+      "|Charlie|  43|\n",
+      "|  David|  95|\n",
+      "|    Eva|  62|\n",
+      "+-------+----+\n",
+      "only showing top 5 rows\n"
+     ]
+    }
+   ],
    "source": [
-    "housing_rdd = split_rdd.map(lambda x: (int(x[0]), float(x[1]), int(x[2]), int(x[3]), int(x[4]), x[5]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51b25979-7d51-410b-8c88-2a17eb30194f",
-   "metadata": {},
-   "source": [
-    "This statement converts the split_rdd into a structured RDD housing_rdd by mapping each row to a tuple with appropriate data types: id as integer, price as float, area, bedrooms, and bathrooms as integers, and location as string."
+    "print(\"=== Select name and math columns ===\")\n",
+    "df.select(\"name\", \"math\").show(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4ccc32b7-8c76-4621-8e91-817ad808954d",
+   "id": "460d1b74-2365-404a-9f10-b2cc82c9b774",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== First 10 Rows ===\n",
-      "(13300000, 7420.0, 4, 2, 3, 'yes')\n",
-      "(12250000, 8960.0, 4, 4, 4, 'yes')\n",
-      "(12250000, 9960.0, 3, 2, 2, 'yes')\n",
-      "(12215000, 7500.0, 4, 2, 2, 'yes')\n",
-      "(11410000, 7420.0, 4, 1, 2, 'yes')\n",
-      "(10850000, 7500.0, 3, 3, 1, 'yes')\n",
-      "(10150000, 8580.0, 4, 3, 4, 'yes')\n",
-      "(10150000, 16200.0, 5, 3, 2, 'yes')\n",
-      "(9870000, 8100.0, 4, 1, 2, 'yes')\n",
-      "(9800000, 5750.0, 3, 2, 4, 'yes')\n"
+      "=== Students with math >= 80 ===\n",
+      "+---+------+---+------+----+-------+-------+\n",
+      "| id|  name|age|gender|math|science|english|\n",
+      "+---+------+---+------+----+-------+-------+\n",
+      "|  2|   Bob| 20|     M|  82|     52|     77|\n",
+      "|  4| David| 19|     M|  95|     69|     46|\n",
+      "| 11| Kathy| 25|     M|  85|     71|     89|\n",
+      "| 12|   Leo| 24|     M|  97|     84|     83|\n",
+      "| 15|Olivia| 18|     M|  87|     90|     87|\n",
+      "+---+------+---+------+----+-------+-------+\n",
+      "only showing top 5 rows\n"
      ]
     }
    ],
    "source": [
-    "print(\"=== First 10 Rows ===\")\n",
-    "for row in housing_rdd.take(10):\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d17cfdee-7bf2-439f-8f42-6c1eee89bc80",
-   "metadata": {},
-   "source": [
-    "These statements display a header message and then print the first 10 rows of the structured RDD housing_rdd to show a sample of the dataset."
+    " print(\"=== Students with math >= 80 ===\")\n",
+    " df.filter(df.math >= 80).show(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "52e9425f-7d6f-4ac9-9fc1-0bc80e3a2d47",
+   "id": "622ecbfc-99d6-4c60-a85f-f32f3b7a5fe9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Sorted by science (desc) ===\n",
+      "+---+------+---+------+----+-------+-------+\n",
+      "| id|  name|age|gender|math|science|english|\n",
+      "+---+------+---+------+----+-------+-------+\n",
+      "| 27| Aaron| 25|     F|  81|     99|     44|\n",
+      "| 32| Fiona| 22|     F|  48|     96|     48|\n",
+      "| 33|George| 22|     M|  66|     95|     84|\n",
+      "| 29|  Carl| 22|     F|  53|     92|     52|\n",
+      "|  1| Alice| 20|     F|  66|     92|     44|\n",
+      "+---+------+---+------+----+-------+-------+\n",
+      "only showing top 5 rows\n"
+     ]
+    }
+   ],
    "source": [
-    "avg_price_rdd = housing_rdd.map(lambda x: (x[5], (x[1], 1))) \\\n",
-    "                           .reduceByKey(lambda a, b: (a[0] + b[0], a[1] + b[1])) \\\n",
-    "                           .mapValues(lambda v: round(v[0] / v[1], 2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "af5af4bd-c5d7-4484-9839-9e9c005a6717",
-   "metadata": {},
-   "source": [
-    "This statement computes the average house price for each location by summing the prices and counts per location and then dividing the total price by the count, rounding the result to two decimal places.\n"
+    "print(\"=== Sorted by science (desc) ===\")\n",
+    "df.orderBy(df.science.desc()).show(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7e7a77ba-46db-455b-a7a7-fa4b9f119cd9",
+   "id": "1a89743f-bd2e-4ecd-832b-1edc3d096bd4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "=== Average Price ===\n",
-      "no 3606.44\n",
-      "yes 5404.59\n"
+      "Total rows in dataset: 50\n"
      ]
     }
    ],
    "source": [
-    "print(\"\\n=== Average Price ===\")\n",
-    "for loc, avg in avg_price_rdd.collect():\n",
-    "    print(loc, avg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e7378b06-7efe-414f-b006-a7c9e926a70c",
-   "metadata": {},
-   "source": [
-    "These statements display a header message and then print the average house price for each location by collecting and iterating over the results from avg_price_rdd."
+    " print(\"Total rows in dataset:\", df.count())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "17421f11-9cf6-49f8-851d-fa8c27dfb089",
+   "id": "0f680411-ee9f-49d8-a3cd-dc68c8a31742",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum area in dataset: 16200.0\n"
+      "Columns: ['id', 'name', 'age', 'gender', 'math', 'science', 'english']\n"
      ]
     }
    ],
    "source": [
-    "max_area = housing_rdd.map(lambda x: x[1]).max()\n",
-    "print(\"Maximum area in dataset:\", max_area)"
+    " print(\"Columns:\", df.columns)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2f54a9c8-f4e4-4f82-8e54-7a5a9bfa1c70",
+   "id": "e5aa704a-3ce8-4305-9fb3-48ea6a2b1596",
    "metadata": {},
    "source": [
-    "To find the highest house area in the dataset by extracting the area from each row and then print the maximum value."
+    "**Conclusion**\n",
+    "In this PySpark program, a DataFrame was created using a CSV file containing student details such as ID, name, age, gender, and marks. Various basic operations were performed to understand and manipulate the data. The dataset was explored using functions like .show() to view sample rows and .printSchema() to understand its structure. Specific columns such as name and math were selected for focused analysis, while filters were applied to find students scoring above 80 in math. Sorting was used to display top science scorers, and other operations like counting rows and listing column names helped summarize the dataset. Overall, this demonstrates how PySpark DataFrames allow easy data exploration and manipulation in a distributed environment.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cab61091-4892-41ef-af08-2e72f5505c58",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
