--- a/2.Collect() Operation with RDD Operation/2.Collect() Operation with RDD Operation.ipynb
+++ b/2.Collect() Operation with RDD Operation/2.Collect() Operation with RDD Operation.ipynb
@@ -1,83 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "cade6343-742d-4ef4-a004-ba3494574a4c",
+   "cell_type": "markdown",
+   "id": "2485d7a9-8094-4152-9cac-edfa54a0cfc7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pyspark.sql import SparkSession"
+    "**Collect() Operation with RDD Operation**"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0c0dba43-5abd-4e33-bcff-e04ed47f9526",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d546791f-b239-4ef8-9e70-2ace55040e58",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "imports the SparkSession class from PySpark, which is used to create a Spark environment for reading, processing, and analyzing data."
+    "data = sc.textFile(\"students.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5fe8a9b6-b5ec-43a8-b69e-f921d2760324",
+   "id": "5a92864f-d152-46b5-9ce7-e6ef7e758929",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark = SparkSession.builder.appName(\"HousingRDDExample\").getOrCreate()\n",
-    "sc = spark.sparkContext"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "27ebc659-0f00-4a3a-bd50-f1b7e8e62189",
-   "metadata": {},
-   "source": [
-    "These statements create a Spark session named `\"HousingRDDExample\"` to set up the Spark environment and then access its SparkContext (`sc`) to perform low-level RDD operations."
+    " header = data.first()\n",
+    " rows = data.filter(lambda line: line != header)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f6de6f05-b88b-41d9-879b-37b577696f6c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = sc.textFile(\"Housing.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a6c9f081-3036-4581-9833-30de4d06f88d",
-   "metadata": {},
-   "source": [
-    "reads the file \"Housing.csv\" as an RDD of text lines, allowing low-level Spark operations on each line of the dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "65441a89-cbf6-4f57-bbe3-0e3587e92af7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "header = data.first()\n",
-    "rows = data.filter(lambda line: line != header)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ff475a23-e98b-4551-a700-79b117fecc99",
-   "metadata": {},
-   "source": [
-    "extract the first line of the RDD as the header and then create a new RDD rows that excludes the header, leaving only the data rows."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "dc964803-5885-40a0-b9db-9a1d5faf5b12",
+   "id": "b6b0be74-ab51-47c6-95be-f3ce5b788e1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,191 +40,148 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c088eab4-36d7-4a6b-b090-9bb0dc79ef91",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c2f50936-c368-4f42-a9a2-f539569575aa",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Student Dataset (first 10 rows) ===\n",
+      "['1', 'Alice', '20', 'F', '66', '92', '44']\n",
+      "['2', 'Bob', '20', 'M', '82', '52', '77']\n",
+      "['3', 'Charlie', '22', 'F', '43', '57', '76']\n",
+      "['4', 'David', '19', 'M', '95', '69', '46']\n",
+      "['5', 'Eva', '19', 'F', '62', '44', '96']\n",
+      "['6', 'Frank', '22', 'F', '70', '78', '94']\n",
+      "['7', 'Grace', '24', 'F', '67', '66', '93']\n",
+      "['8', 'Henry', '21', 'F', '53', '82', '60']\n",
+      "['9', 'Ivy', '19', 'M', '64', '52', '46']\n",
+      "['10', 'Jack', '19', 'F', '44', '59', '60']\n"
+     ]
+    }
+   ],
    "source": [
-    "splits each line in the rows RDD by commas, creating a new RDD split_rdd where each element is a list of column values for a row."
+    " print(\"=== Student Dataset (first 10 rows) ===\")\n",
+    " for row in split_rdd.take(10):   # you can change 10 → 20, 50 etc.\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "46cbb462-b8ca-48e9-8037-5efe4edcd4d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students_rdd = split_rdd.map(lambda x: (int(x[0]), x[1], int(x[2]), x[3], int(x[4]), int(x[5]), int(x[6])))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "00e1cd33-a875-45cf-881e-9f2bde5afaff",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Housing Dataset (first 10 rows) ===\n",
-      "['13300000', '7420', '4', '2', '3', 'yes', 'no', 'no', 'no', 'yes', '2', 'yes', 'furnished']\n",
-      "['12250000', '8960', '4', '4', '4', 'yes', 'no', 'no', 'no', 'yes', '3', 'no', 'furnished']\n",
-      "['12250000', '9960', '3', '2', '2', 'yes', 'no', 'yes', 'no', 'no', '2', 'yes', 'semi-furnished']\n",
-      "['12215000', '7500', '4', '2', '2', 'yes', 'no', 'yes', 'no', 'yes', '3', 'yes', 'furnished']\n",
-      "['11410000', '7420', '4', '1', '2', 'yes', 'yes', 'yes', 'no', 'yes', '2', 'no', 'furnished']\n",
-      "['10850000', '7500', '3', '3', '1', 'yes', 'no', 'yes', 'no', 'yes', '2', 'yes', 'semi-furnished']\n",
-      "['10150000', '8580', '4', '3', '4', 'yes', 'no', 'no', 'no', 'yes', '2', 'yes', 'semi-furnished']\n",
-      "['10150000', '16200', '5', '3', '2', 'yes', 'no', 'no', 'no', 'no', '0', 'no', 'unfurnished']\n",
-      "['9870000', '8100', '4', '1', '2', 'yes', 'yes', 'yes', 'no', 'yes', '2', 'yes', 'furnished']\n",
-      "['9800000', '5750', '3', '2', '4', 'yes', 'yes', 'no', 'no', 'yes', '1', 'yes', 'unfurnished']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"=== Housing Dataset (first 10 rows) ===\")\n",
-    "for row in split_rdd.take(10):\n",
-    "    print(row)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4d94666-457b-488e-9375-ec0e1e5b115b",
+   "id": "5d1d4e0c-7e85-42e3-921c-ba1cc7913878",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "display a header message and then print the first 10 rows of the split_rdd RDD to show a sample of the dataset."
+    " avg_marks_rdd = students_rdd.map(lambda x: (x[1], (x[4] + x[5] + x[6]) / 3))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "53d37231-81ed-44cc-b001-f721ed390ce1",
+   "id": "77ba70f2-aeef-4b9c-88ec-e0ced1bea280",
    "metadata": {},
    "outputs": [],
    "source": [
-    "housing_rdd = split_rdd.map(lambda x: (int(x[0]), float(x[1]), int(x[2]), int(x[3]), float(x[4])))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "571da243-4ec7-440b-ac0b-9b030e344cd9",
-   "metadata": {},
-   "source": [
-    "displays a header message and prints the first 10 rows of the split_rdd RDD, providing a sample view of the dataset."
+    " passed_rdd = avg_marks_rdd.filter(lambda x: x[1] >= 75)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "22824db2-14ce-48d4-9cef-4d59f741bc86",
+   "id": "49cd2368-cf91-4747-b4de-31b47b15f19c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "price_per_area_rdd = housing_rdd.map(lambda x: (x[0], x[4] / x[1]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ebc70e2b-9b00-49a7-a16b-04658264b87d",
-   "metadata": {},
-   "source": [
-    "creates a new RDD price_per_area_rdd by calculating the price per area for each house, mapping each row to a tuple of (id, price/area)."
+    "sorted_passed_rdd = passed_rdd.sortBy(lambda x: x[1], ascending=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "31fe6c7b-3540-45a2-9f3d-67833296807b",
+   "id": "32c99bed-86c8-4a3f-ae40-a61792618b1c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "expensive_rdd = price_per_area_rdd.filter(lambda x: x[1] >= 5000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "abccc025-3aa7-487e-ab6b-9fe00410697e",
-   "metadata": {},
-   "source": [
-    "filters the price_per_area_rdd to include only houses where the price per area is at least 5000, creating a new RDD expensive_rdd."
+    " results = sorted_passed_rdd.collect()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2177c2c4-603c-4ee1-9843-62340fa56c97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted_expensive_rdd = expensive_rdd.sortBy(lambda x: x[1], ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a5de073b-da4b-4ba0-87dc-8f323b2fca6d",
-   "metadata": {},
-   "source": [
-    "sorts the expensive_rdd in descending order based on the price per area, creating a new RDD sorted_expensive_rdd."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "d74a920c-fd68-4087-a59c-f99beb5bc795",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = sorted_expensive_rdd.collect()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "80542509-6fd1-4b6e-b7c8-52b65f9f363e",
-   "metadata": {},
-   "source": [
-    "This statement collects all elements of the `sorted_expensive_rdd` RDD into a Python list named `results`, bringing the data from the distributed RDD to the local driver."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "e001f9ce-d2a9-478b-8814-398768dfa692",
+   "id": "531e2561-93db-408c-8680-527556852c6d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Top 10 Expensive Houses (Price per Area) ===\n",
-      "ID: 6930000, Price per Area: 6600.00\n",
-      "ID: 5110000, Price per Area: 5705.00\n",
-      "ID: 5600000, Price per Area: 5250.00\n",
-      "ID: 5943000, Price per Area: 5200.00\n",
-      "ID: 4305000, Price per Area: 5180.00\n",
-      "ID: 4760000, Price per Area: 5120.00\n",
-      "ID: 4760000, Price per Area: 4583.00\n",
-      "ID: 7070000, Price per Area: 4440.00\n",
-      "ID: 9800000, Price per Area: 4400.00\n",
-      "ID: 3500000, Price per Area: 4314.67\n"
+      "=== Students with Average >= 75 ===\n",
+      "Name: Leo, Avg Marks: 88.00\n",
+      "Name: Olivia, Avg Marks: 88.00\n",
+      "Name: Rita, Avg Marks: 86.67\n",
+      "Name: Kathy, Avg Marks: 81.67\n",
+      "Name: George, Avg Marks: 81.67\n",
+      "Name: Frank, Avg Marks: 80.67\n",
+      "Name: Oscar, Avg Marks: 80.00\n",
+      "Name: Uma, Avg Marks: 78.33\n",
+      "Name: Kyle, Avg Marks: 78.33\n",
+      "Name: Matt, Avg Marks: 78.33\n",
+      "Name: Tina, Avg Marks: 76.00\n",
+      "Name: Victor, Avg Marks: 75.67\n",
+      "Name: Grace, Avg Marks: 75.33\n",
+      "Name: Mona, Avg Marks: 75.00\n",
+      "Name: Will, Avg Marks: 75.00\n"
      ]
     }
    ],
    "source": [
-    "price_per_area_rdd = housing_rdd.map(lambda x: (x[0], x[1] / x[2]))\n",
-    "sorted_expensive_rdd = price_per_area_rdd.sortBy(lambda x: x[1], ascending=False)\n",
-    "top10_expensive = sorted_expensive_rdd.take(10)\n",
-    "print(\"=== Top 10 Expensive Houses (Price per Area) ===\")\n",
-    "for house in top10_expensive:\n",
-    "    print(f\"ID: {house[0]}, Price per Area: {house[1]:.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bb043097-180b-446b-bd0f-1eaf6f7f88b1",
-   "metadata": {},
-   "source": [
-    "This code calculates the price per area for each house, sorts the houses in descending order of price per area, retrieves the top 10 most expensive houses, and prints their IDs along with the price per area rounded to two decimals."
+    "print(\"=== Students with Average >= 75 ===\")\n",
+    "for student in results:\n",
+    "    print(f\"Name: {student[0]}, Avg Marks: {student[1]:.2f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "39e74d6b-2fed-4c9e-97be-b79634c741c0",
+   "execution_count": 11,
+   "id": "42d2319b-f306-4489-8a35-c4ccd10e4d8c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Number of students who passed: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    " count_passed = passed_rdd.count()\n",
+    " print(\"\\nNumber of students who passed:\", count_passed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb294c5b-22ae-435d-b304-861a8b6f5f8a",
+   "metadata": {},
+   "source": [
+    "**Conclusion**\n",
+    "This PySpark RDD program demonstrates how to process and analyze a student dataset using distributed data operations. The analysis successfully loads the CSV file, removes the header, splits the data into structured fields, and calculates each student’s average marks. Using transformations like map(), filter(), and sortBy(), the program identifies students who scored an average of 75 or above. The collect() operation retrieves the processed results from all worker nodes to the driver for display. The output shows that 15 students passed, with Olivia being the top scorer. Overall, this experiment clearly shows how PySpark’s RDD operations can efficiently handle data transformation, filtering, sorting, and aggregation in a parallel computing environment."
+   ]
   }
  ],
  "metadata": {
