--- a/1.DataTransformation Using PySpark RDD/1.DataTransformation Using PySpark RDD.ipynb
+++ b/1.DataTransformation Using PySpark RDD/1.DataTransformation Using PySpark RDD.ipynb
@@ -1,76 +1,87 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "c763c02f-a5e1-45f8-940d-d164c095944f",
+   "cell_type": "markdown",
+   "id": "0fffe30d-fd31-4d6b-bbbb-1486cba08f18",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import random\n",
-    "from pyspark.sql import SparkSession"
+    "**DataTransformation Using PySpark RDD**"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e08572ad-eec3-407d-bbb9-5ef7327ccd38",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "33d6fe1e-8f1f-4f34-8f66-318648d20041",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://LAPTOP-2P70OJO0:4042\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v4.0.1</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>local[*]</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>PySparkShell</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<SparkContext master=local[*] appName=PySparkShell>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import the Python random module for generating random values and the SparkSession class from PySpark to create a Spark environment for data processing."
+    "sc"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3fe1c53e-293e-4b7b-8248-f418057e09a0",
+   "id": "11cdc014-2ef5-4aef-8cb0-72e10fbe90bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "spark = SparkSession.builder.appName(\"EvenNumberFilter\").getOrCreate()\n",
-    "sc = spark.sparkContext"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7532f974-1852-4cc8-8365-147592f71e8e",
-   "metadata": {},
-   "source": [
-    "create a Spark session named \"EvenNumberFilter\" to set up the Spark environment and then access its SparkContext (sc) for performing RDD operations."
+    "import random"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "19dfd07c-f164-4bcd-9fb5-d15fe6d95661",
+   "id": "65ec47b6-88ce-4194-a2a1-8fe90851acd1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Original List ===\n",
-      "[932, 386, 793, 728, 952, 55, 440, 491, 923, 116, 630, 30, 117, 107, 79, 374, 659, 467, 88, 432, 842, 907, 905, 222, 688, 275, 20, 198, 784, 186, 712, 987, 794, 184, 580, 934, 581, 309, 655, 689, 652, 527, 515, 888, 530, 261, 568, 943, 683, 486, 260, 422, 511, 912, 738, 338, 597, 511, 822, 331, 159, 930, 854, 755, 26, 525, 563, 954, 890, 150, 806, 515, 839, 152, 398, 541, 349, 868, 938, 273, 483, 695, 170, 271, 368, 43, 916, 616, 721, 447, 857, 504, 782, 905, 245, 857, 652, 821, 908, 971]\n"
+      "Original List:\n",
+      "[338, 43, 829, 43, 159, 860, 689, 1, 376, 592, 434, 937, 228, 834, 985, 182, 710, 219, 285, 260, 449, 295, 618, 371, 904, 218, 192, 524, 218, 665, 718, 847, 721, 116, 608, 573, 564, 460, 695, 185, 607, 742, 96, 266, 506, 389, 582, 454, 551, 113, 819, 389, 104, 583, 729, 624, 906, 808, 561, 357, 804, 57, 780, 815, 493, 383, 571, 388, 850, 815, 39, 204, 761, 696, 234, 588, 262, 954, 407, 201, 101, 511, 548, 284, 91, 112, 933, 403, 16, 750, 855, 706, 296, 745, 844, 364, 732, 181, 464, 272]\n"
      ]
     }
    ],
    "source": [
     "random_numbers = [random.randint(1, 1000) for _ in range(100)]\n",
-    "print(\"=== Original List ===\")\n",
+    "print(\"Original List:\")\n",
     "print(random_numbers)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96081dda-0cd9-4b5e-bfe1-6741017ac40c",
-   "metadata": {},
-   "source": [
-    "generate a list of 100 random integers between 1 and 1000, and then print a header followed by the generated list."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b38e9d73-b865-4151-89fa-b325da3fad7e",
+   "id": "3c82522e-5dbb-4bc2-9d58-175826fe42e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,17 +89,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e623008a-88f3-41b9-87cb-a40c6c9eef66",
-   "metadata": {},
-   "source": [
-    "converts the random_numbers Python list into a Spark RDD named numbers_rdd, allowing distributed processing of the numbers."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6f1a27f9-9bdb-4432-ac4f-c03f03fa09bd",
+   "id": "38f538d9-59fd-42b6-9bdc-355d05c433e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,17 +99,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a75aa265-d354-48b5-830e-936e19651f6d",
-   "metadata": {},
-   "source": [
-    "filters the numbers_rdd to include only even numbers, creating a new RDD even_numbers_rdd."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e40716e4-e0f9-403d-bd3e-7a54c67139b4",
+   "id": "3ea668b9-9e63-4971-9da1-3b355f2ae15e",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +110,7 @@
      "text": [
       "\n",
       "Even Numbers:\n",
-      "[932, 386, 728, 952, 440, 116, 630, 30, 374, 88, 432, 842, 222, 688, 20, 198, 784, 186, 712, 794, 184, 580, 934, 652, 888, 530, 568, 486, 260, 422, 912, 738, 338, 822, 930, 854, 26, 954, 890, 150, 806, 152, 398, 868, 938, 170, 368, 916, 616, 504, 782, 652, 908]\n"
+      "[338, 860, 376, 592, 434, 228, 834, 182, 710, 260, 618, 904, 218, 192, 524, 218, 718, 116, 608, 564, 460, 742, 96, 266, 506, 582, 454, 104, 624, 906, 808, 804, 780, 388, 850, 204, 696, 234, 588, 262, 954, 548, 284, 112, 16, 750, 706, 296, 844, 364, 732, 464, 272]\n"
      ]
     }
    ],
@@ -127,10 +122,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61bb023e-156d-4dac-8d6a-f73fb7dd37cd",
+   "id": "49188e5b-f3ef-46f5-a469-d14ebbfda6f7",
    "metadata": {},
    "source": [
-    "collect all elements of the even_numbers_rdd into a Python list and then print a header followed by the list of even numbers."
+    "**Conclusion**\n",
+    "This PySpark program successfully filters even numbers from a list of randomly generated integers using RDD transformations. It shows how PySpark can handle distributed data processing efficiently, even for simple tasks. The program demonstrates key Spark operations like creating an RDD, applying a filter transformation, and collecting the results. Overall, it highlights the basic working of PySpark RDDs and how they can be used for parallel data processing in real-time big data applications."
    ]
   }
  ],
